# mini_vpn

./: .gitignore  AGENTS.md  ASSESSMENT.md  CONTEXT.md  Cargo.toml  Dockerfile  HANDOFF.md  README.md  Rules.md  TODO.md  cert.pem  key.pem  test_data_start_overflow
.github/workflows/: ci.yml  deploy-ssh.yml  deploy.yml
.learnings/: ERRORS.md  LEARNINGS.md
certs/dev/: ca-cert.pem  ca-cert.srl  ca-key.pem  server-cert.pem  server-key.pem
deploy/systemd/: mini_vpn.service
docs/: production-plan.md  solution-2.md  solution.md
docs/adr/: 0001-tun-target-is-ip-port.md  0002-fake-ip-over-dns-forward.md  0003-unify-data-plane-on-quic.md  0004-tuic-protocol-data-plane.md  0005-cubic-over-bbr-datagram.md  0006-block-encrypted-dns.md  0007-hijack-all-plaintext-dns.md  0008-vless-reality-second-transport.md  0009-tls13-cipher-scope-0x1301-first.md  0010-reality-certverify-defer.md  0011-tuic-reality-auto-failover.md  0012-data-plane-observability-metrics.md  0013-client-loop-not-the-100m-bottleneck.md
docs/tech/: 01-shared-models-and-relay-protocol.md  02-direct-proxy-refactor.md  03-tun-runtime-skeleton.md  04-real-listener-pool-activation.md  05-tun-runtime-minimal-config.md  06-tun-upstream-minimal-config.md  07-cert-path-and-sni-alignment.md  07-server-bind-and-client-connect-errors.md  08-target-extraction.md  09-syn-driven-dynamic-ports.md  10-yamux-auto-reconnect.md  11-fake-ip-dns.md  12-udp-over-quic-datagram.md  13-tuic-tcp-connect.md  13b-tuic-udp-packet.md  2026-05-07-mini-vpn-relay-runtime-spec.md  2026-05-07-stage-1-shared-models-and-relay-protocol-plan.md  2026-05-07-stage-1-shared-models-implementation-plan.md  2026-05-07-stage-4-acceptance-summary.md  2026-05-07-stage-4-listener-pool-activation-plan.md  2026-05-07-stage-4-listener-pool-activation-spec.md  2026-05-07-stage-5-tun-runtime-config-plan.md  2026-05-07-stage-5-tun-runtime-config-spec.md  2026-05-07-stage-6-tun-upstream-config-plan.md  2026-05-07-stage-6-tun-upstream-config-spec.md  2026-05-12-server-bind-config-hotfix-plan.md  2026-05-12-stage-7-cert-config-plan.md  2026-05-12-stage-7-cert-config-spec.md  2026-05-27-stage-8-target-extraction-plan.md  2026-05-27-stage-8-target-extraction-spec.md  2026-05-29-stage-9-syn-driven-dynamic-ports-plan.md  2026-05-29-stage-9-syn-driven-dynamic-ports-spec.md  2026-06-01-stage-10-yamux-reconnect-plan.md  2026-06-01-stage-10-yamux-reconnect-spec.md  2026-06-02-stage-11-fake-ip-dns-plan.md  2026-06-02-stage-11-fake-ip-dns-spec.md  2026-06-05-stage-12-udp-over-quic-datagram-plan.md  2026-06-05-stage-12-udp-over-quic-datagram-spec.md  2026-06-08-stage-13a-tuic-tcp-connect-plan.md  2026-06-08-stage-13a-tuic-tcp-connect-spec.md  (+83 more)
draw/: ipinfo-sequence.mmd  layout.drawio  tun.drawio  web-2.mmd  web.drawio
scripts/: gen-test-certs.sh  knife14b-direct-baseline.sh  knife14b-lowrtt-probe.sh  knife14b-usclient-tunnel-suite.sh  knife35-acceptance.sh  knife8-reality-acceptance.sh  knife9-failover-acceptance.sh  rollback.sh  server-init.sh
src/: SmoltcpStream.rs  client.rs  client_tun.rs  device.rs  dns.rs  dns_block.rs  failover.rs  fake_ip.rs  harness.rs  lib.rs  loop_profiler.rs  main.rs  metrics.rs  quic.rs  reality_upstream.rs  server.rs  tuic.rs  udp_relay.rs  upstream.rs  use smoltcp::phy::{Device, DeviceCapabil.ini
src/reality/: auth.rs  cert.rs  client_hello.rs  handshake.rs  key_schedule.rs  mod.rs  record.rs  server_hello.rs  testutil.rs  vless.rs
src/shared/: errors.rs  mod.rs  (+3 more)
tests/: concurrency_harness.rs  shared_relay_protocol.rs  udp_quic_relay.rs
