[package]
name = "mini_vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"

# TLS 信任材料 / 证书加载（quinn 数据面用）。Stage 13d 退役 legacy 后不再需要
# tokio-rustls（裸 TLS 流）/ yamux（多路复用）/ rand / tokio-util / futures / chacha。
rustls = "0.21"
rustls-pemfile = "1.0" # 用于读取证书文件

# Stage 12+：QUIC 数据面（TUIC over quinn）。0.10 依赖 rustls ^0.21，单一 rustls 版本（见 docs/adr/0003）。
quinn = "0.10"

# Stage 13a：ProxyUpstream trait 的 async fn 需要在 dyn 对象上分发（成熟惯用方案）。
async-trait = "0.1"

# 处理 TUN 网卡
tun = { version = "0.6", features = ["async"] }
# 用户态 TCP/IP 协议栈
smoltcp = { version = "0.10", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
# 辅助解析 IP/TCP 头部
etherparse = "0.13"
