[package]
name = "mini_vpn"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1.0"
thiserror = "1.0"

# TLS 信任材料 / 证书加载（quinn 数据面用）。Stage 13d 退役 legacy 后不再需要
# tokio-rustls（裸 TLS 流）/ yamux（多路复用）/ rand / tokio-util / futures / chacha。
rustls = "0.21"
rustls-pemfile = "1.0" # 用于读取证书文件

# Stage 12+：QUIC 数据面（TUIC over quinn）。0.10 依赖 rustls ^0.21，单一 rustls 版本（见 docs/adr/0003）。
quinn = "0.10"

# Stage 13a：ProxyUpstream trait 的 async fn 需要在 dyn 对象上分发（成熟惯用方案）。
async-trait = "0.1"

# 处理 TUN 网卡
tun = { version = "0.6", features = ["async"] }
# 用户态 TCP/IP 协议栈
smoltcp = { version = "0.10", default-features = false, features = ["std", "medium-ip", "proto-ipv4", "socket-tcp", "socket-udp"] }
# 辅助解析 IP/TCP 头部
etherparse = "0.13"

# 刀6：REALITY 抗封锁第二传输的密码学原语（手写 TLS 1.3 握手，见 ADR-0008）。
# 成熟 RustCrypto 原语——我方只组装 TLS 字节，不引入第二个 TLS 库（不破 ADR-0003 单 rustls）。
x25519-dalek = "2"
hkdf = "0.12"
sha2 = "0.10"
aes-gcm = "0.10"
hmac = "0.12"
rand = "0.8"

# 刀8：base64 解码 sing-box reality public_key(base64url 43 字符 → 32B,见 ADR-0009 修订/grill 裁决 e)。
# 注：原拟用 x509-cert 解析临时证书,但真出口实测 sing-box 临时证书 Validity 用 GeneralizedTime,
# x509-cert(严格 RFC 5280) 拒之 → 改回手解 DER 定点提 SPKI 公钥+末 64B 签名(src/reality/cert.rs,见 ADR-0010)。
base64 = "0.22"

[features]
# knife1：大并发压测 harness（内存回环 device + mock 上游 + 第二 smoltcp 流量发生器）。
# 仅在跑压测时启用，生产二进制不含此脚手架。见 docs/tech/2026-06-12-knife1-*。
harness = []

[dev-dependencies]
# tests/concurrency_harness.rs 用 #[tokio::test] 驱动高层 harness API（smoltcp/bytes 全封在 lib 内）。
tokio = { version = "1", features = ["full"] }
# 刀6：独立解析手写的 TLS 1.3 ClientHello（验证结构，与我方编码器解耦——别用自己的解析器验自己的编码器）。
tls-parser = "0.12"
